# raymonde

./: CMakeLists.txt  Camera.hpp  Geometry.hpp  LICENSE  Light.cpp  Light.hpp  Material.cpp  Material.hpp  README.md  Ray.hpp  Scene.cpp  Scene.hpp  SinePlane.cpp  SinePlane.hpp  Sphere.cpp  Sphere.hpp  TODO  Vector.hpp  constants.hpp  main.cpp  material.hpp  sphere.hpp  vector.hpp
